upgraded dependencies and jitpack build